<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CoupleApp</string>
    <string name="share">공유</string>
    <string name="problem">문제 발생</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="couple">커플</string>
    <string name="map">지도</string>
    <string name="description">설명</string>
    <string name="count">갯수</string>
    <string name="profile">프로필</string>
    <string name="faceFileName">haarcascade_frontalface_alt2.xml</string>
    <string name="eyeTreeFileName">haarcascade_eye_tree_eyeglasses.xml</string>
    <string name="sunglassesImageFileName">sunglasses.png</string>
    <string name="googleMapKey">AIzaSyBcIHjF8CTs9_qbxMZzP5NZsG8r8zmPg5s</string>
    <string name="serverLink" tools:ignore="TypographyDashes">http://ec2-13-125-99-215.ap-northeast-2.compute.amazonaws.com/</string>
    <string name="serverDomain" tools:ignore="TypographyDashes">ec2-13-125-99-215.ap-northeast-2.compute.amazonaws.com</string>
    <string name="serverIP">13.125.99.215</string>
    <string name="userColumnID">userColumnID</string>
    <string name="partnerConnection">partnerConnection</string>
    <string name="coupleColumnID">coupleColumnID</string>
    <string name="userName">userName</string>
    <string name="profileImageUrl">profileImageUrl</string>
    <string name="firebaseMessagingToken">firebaseMessagingToken</string>
    <string name="joinedChatRoomNumber">joinedChatRoomNumber</string>
    <string name="email">이메일</string>
    <string name="password">패스워드</string>
    <string name="signIn">로그인</string>
    <string name="signUp">회원가입</string>
    <string name="connect">연결하기</string>
    <string name="forgot">이메일/비밀번호 찾기</string>
    <string name="googleSignIn">구글로 로그인</string>
    <string name="googleSignUp">구글로 회원가입</string>
    <string name="firstStep">step 1</string>
    <string name="secondStep">step 2</string>
    <string name="greeting">CoupleApp에 오신 것을 환영합니다.\n회원가입을 진행해 주세요.</string>
    <string name="inviteGuidance">상대방에게 초대코드를 보내거나\n상대의 초대코드를 입력해주세요.</string>
    <string name="opponentInviteCode">상대방 초대 코드</string>
    <string name="myInviteCodeNotice">내 초대코드</string>
    <string name="opponentInviteCodeNotice">상대방의 초대코드를 입력해주세요</string>
    <string name="emailInValid">이메일 형식에 맞지 않습니다</string>
    <string name="emailDuplicated">중복된 이메일 입니다</string>
    <string name="passwordValidation">8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요</string>
    <string name="valid">사용가능 합니다</string>
    <string name="checkPassword">비밀번호를 확인해주세요</string>
    <string name="checkEmail">이메일을 확인해주세요</string>
    <string name="calendar">캘린더</string>
    <string name="story">스토리</string>
    <string name="addPlan">일정 추가</string>
    <string name="openPublic">공동</string>
    <string name="openPrivate">개인</string>
    <string name="title">제목</string>
    <string name="chooseType">유형 선택</string>
    <string name="location">위치</string>
    <string name="allDay">하루 종일</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="notDO">안함</string>
    <string name="repeat">반복</string>
    <string name="nothing">없음</string>
    <string name="alarm">알림</string>
    <string name="memo">메모(빈칸 가능)</string>
    <string name="dateWithPartner">데이트</string>
    <string name="travel">여행</string>
    <string name="cultureLife">문화생활</string>
    <string name="school">학교</string>
    <string name="other">기타</string>
    <string name="friendsCouple">다른 커플</string>
    <string name="home">홈</string>
    <string name="chat">채팅</string>
    <string name="album">앨범</string>
    <string name="notice">알림</string>
    <string name="more">더보기</string>
    <string name="publicOrNot">공동인지 아닌지</string>
    <string name="background">탭 백그라운드</string>
    <string name="uploadBtn">저장하기 버튼</string>
    <string name="easyDescription">사용자가 쉽게 알 수 있게 이미지로 설명 보조</string>
    <string name="profileImage">프로파일 이미지</string>
    <string name="myLocation">내 위치</string>
    <string name="typeImage">타입 이미지</string>
    <string name="goBackTitle">돌아가기</string>
    <string name="goBackMessage">변경 사항은 저장되지 않습니다.\n그래도 돌아가시겠습니까?</string>
    <string name="dateDummy">날짜 넣어야 함</string>
    <string name="time">시간</string>
    <string name="name">이름</string>
    <string name="message">메시지</string>
    <string name="opponent">상대방 이름</string>
    <string name="startTime">시작 시간</string>
    <string name="endTime">종료 시간</string>
    <string name="settings_name" translatable="false">AppRTC Settings</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_description">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_settings">Settings</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="missing_permissions_try_again">The application is missing permissions. It might not work correctly. Do you want to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_default">Default</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_enable_save_input_audio_to_file_key">enable_key</string>
    <string name="pref_enable_save_input_audio_to_file_title">Save input audio to file.</string>
</resources>