<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/chat" />

    <item
        android:id="@+id/album"
        android:icon="@drawable/ic_photo_album_black_24dp"
        android:title="@string/album" />

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/map" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/more" />
</menu>