<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/startTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTime"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/endTimeTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/typeImageIV"
        app:layout_constraintTop_toTopOf="@id/typeImageIV" />

    <TextView
        android:id="@+id/endTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endTime"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/typeImageIV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/typeImageIV"
        app:layout_constraintTop_toBottomOf="@+id/startTimeTV" />

    <ImageView
        android:contentDescription="@string/typeImage"
        android:id="@+id/typeImageIV"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:src="@drawable/ic_airplanemode_active_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/title"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/typeImageIV"
        app:layout_constraintLeft_toRightOf="@id/typeImageIV"
        app:layout_constraintTop_toTopOf="@id/typeImageIV" />

    <ImageView
        android:id="@+id/repeatIV"
        android:contentDescription="@string/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_repeat_black_24dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/typeImageIV"
        app:layout_constraintBottom_toBottomOf="@id/typeImageIV"
        app:layout_constraintRight_toLeftOf="@id/notificationIV"/>

    <ImageView
        android:id="@+id/notificationIV"
        android:contentDescription="@string/notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notifications_black_24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/typeImageIV"
        app:layout_constraintBottom_toBottomOf="@id/typeImageIV"
        android:layout_marginEnd="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>