<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpSecondActivity">

    <!--    뒤로가기 버튼 -->
    <ImageView
        android:id="@+id/backBtnIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    제목 : 회원가입 -->
    <TextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/signUp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/inviteGuidance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    단계 표시 (예 : step 1, step 2)-->
    <TextView
        android:id="@+id/firstStepTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/firstStep"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inviteGuidance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/secondStepTV"
        app:layout_constraintTop_toBottomOf="@+id/signUpTV" />

    <TextView
        android:id="@+id/secondStepTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/secondStep"
        android:textColor="@color/mainBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/inviteGuidance"
        app:layout_constraintLeft_toRightOf="@+id/firstStepTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTV" />

    <!--    사용자 알림 -->
    <TextView
        android:id="@+id/inviteGuidance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/inviteGuidance"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/myInviteNoticeTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTV" />

    <!--    바로 하단 view 의 기능 사용자에게 알려주는 알림-->
    <TextView
        android:id="@+id/myInviteNoticeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/myInviteCodeNotice"
        app:layout_constraintBottom_toTopOf="@+id/myInviteCodeTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inviteGuidance" />

    <!--    본인의 초대 코드를 보여주는 EditText (inputType : none)-->
    <TextView
        android:id="@+id/myInviteCodeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/opponentCodeED"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myInviteNoticeTV" />

    <!--    초대 코드 공유하기 버튼-->
    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_color_rounded"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myInviteCodeTV"
        app:layout_constraintRight_toRightOf="@id/myInviteCodeTV"
        app:layout_constraintTop_toTopOf="@+id/myInviteCodeTV" />

    <!--    바로 하단 view 의 기능 사용자에게 알려주는 알림-->
    <TextView
        android:id="@+id/opponentInviteNoticeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/opponentInviteCodeNotice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myInviteCodeTV" />


    <EditText
        android:id="@+id/opponentCodeED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/opponentInviteCode"
        app:layout_constraintBottom_toTopOf="@id/connectBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponentInviteNoticeTV" />

    <Button
        android:id="@+id/connectBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/btn_color_rounded"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opponentCodeED" />


</androidx.constraintlayout.widget.ConstraintLayout>